# wmr

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: code-quality.md  code-review-2026-04-28.md  verbose-mode.md
docs/superpowers/plans/: 2026-04-29-heartbeat-table-split.md
docs/superpowers/specs/: 2026-04-29-heartbeat-table-design.md
examples/: quickstart.py
tests/: conftest.py
tests/integration/: test_local_clear.py  test_local_extra_branches.py  test_local_heartbeats.py  test_local_metas.py  test_local_tags.py  test_local_views.py  test_local_weights.py  test_online_basic.py  test_online_full.py  test_online_heartbeats.py
tests/parity/: test_parity.py
tests/perf/: test_perf.py
tests/unit/: test_online_dsn.py  test_online_final_keyword.py  test_signature_alignment.py  test_utils.py  test_verbose_mode.py
wmr/: __init__.py  base.py  local.py  online.py  utils.py
